added edit and remove guideline, publish can only be done by mod or above remove can only be done by editor or above

--- a/home/public/partials/guidedetails.html
+++ b/home/public/partials/guidedetails.html
@@ -19,38 +19,6 @@
             </div>
         </div>
     </div>
-    <div id="addTransModal" class="modal modal-fixed-footer">
-        <div class="modal-content">
-            <h4>{{'DETAIL_ADD_TRANSLATION'|translate}}</h4>
-            <div class="divider"></div>
-            <form name="translate_form" novalidate>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <textarea ng-model="translation.text" id="translationtext" class="materialize-textarea" required></textarea>
-                        <label for="translationtext">{{'ADD_GUIDELINE'|translate}}</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s4">
-                        <select id="langselect_trans" ng-model="translation.lang" required>
-                            <option value="" disabled selected>{{'ADD_LANGSELECT'|translate}}</option>
-                            <option value="de_DE">{{'LANG_DE'|translate}}</option>
-                            <option value="en_US">{{'LANG_EN'|translate}}</option>
-                            <option value="fr_FR">{{'LANG_FR'|translate}}</option>
-                        </select>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <a href=""
-               class="modal-action modal-close waves-effect waves-orange btn btn-flat"
-               ng-click="detailCtrl.saveTranslation()"
-               ng-class="{disabled:!translate_form.$valid}">
-                {{'ADD_SAVEBTN'|translate}}
-            </a>
-        </div>
-    </div>
     <div class="row">
         <ul class="col s12" ng-repeat="guideline in guide.guidelines">
             <li class="card">
@@ -58,7 +26,7 @@
                     <i class="material-icons badge secondary-content" ng-show="guideline.published">visibility</i>
                     <i class="material-icons badge secondary-content" ng-hide="guideline.published">visibility_off</i>
                     <p class="card-title">{{guideline.text}}</p>
-                    <p>{{'LANGUAGE'|translate}}: {{guideline.lang.toUpperCase()}}<br/>
+                    <p>{{'LANGUAGE'|translate}}: {{guideline.lang}}<br/>
                         {{'DETAIL_AUTHOR'|translate}}: {{guideline.metadata.author.username}}<br/>
                         {{'DETAIL_CREATED'|translate}}: {{guideline.metadata.date|date:'medium'}}<br/>
                         {{'DETAIL_MOTD'|translate}}: {{guideline.motd_flag|boolean|translate}}<br/>
@@ -66,11 +34,84 @@
                     </p>
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-orange" href="">{{'DETAIL_EDIT'|translate}}</a>
-                    <a class="waves-effect waves-orange" href="">{{'DETAIL_DELETE'|translate}}</a>
-                    <a href="" class="waves-effect waves-orange right" ng-click="detailCtrl.publish($index)">{{'DETAIL_PUBLISH'|translate}}</a>
+                    <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.editTranslation($index)">{{'DETAIL_EDIT'|translate}}</a>
+                    <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.removeTranslation($index)">{{'DETAIL_DELETE'|translate}}</a>
+                    <a href="" class="waves-effect waves-orange right" ng-click="detailCtrl.publish($index)" ng-show="authService.getRole() > 3">{{'DETAIL_PUBLISH'|translate}}</a>
                 </div>
             </li>
         </ul>
+    </div>
+</div>
+<!-- Modals -->
+<div id="editTransModal" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4>{{'DETAIL_EDIT_TRANSLATION'|translate}}</h4>
+        <div class="divider"></div>
+        <form name="translate_form" novalidate>
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea ng-model="translation.text" id="translationtext_edit" class="materialize-textarea" required></textarea>
+                    <label for="translationtext">{{'ADD_GUIDELINE'|translate}}</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s4">
+                    <select id="langselect_trans_edit" ng-model="translation.lang" required>
+                        <option value="" disabled selected>{{'ADD_LANGSELECT'|translate}}</option>
+                        <option value="de_DE">{{'LANG_DE'|translate}}</option>
+                        <option value="en_US">{{'LANG_EN'|translate}}</option>
+                        <option value="fr_FR">{{'LANG_FR'|translate}}</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <a href=""
+           class="modal-action modal-close waves-effect waves-orange btn btn-flat">
+            {{'ADD_CANCELBTN'|translate}}
+        </a>
+        <a href=""
+           class="modal-action modal-close waves-effect waves-orange btn btn-flat"
+           ng-class="{disabled:!translate_form.$valid}">
+            {{'ADD_SAVEBTN'|translate}}
+        </a>
+    </div>
+</div>
+
+<div id="addTransModal" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4>{{'DETAIL_ADD_TRANSLATION'|translate}}</h4>
+        <div class="divider"></div>
+        <form name="translate_form" novalidate>
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea ng-model="translation.text" id="translationtext" class="materialize-textarea" required></textarea>
+                    <label for="translationtext">{{'ADD_GUIDELINE'|translate}}</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s4">
+                    <select id="langselect_trans" ng-model="translation.lang" required>
+                        <option value="" disabled selected>{{'ADD_LANGSELECT'|translate}}</option>
+                        <option value="de_DE">{{'LANG_DE'|translate}}</option>
+                        <option value="en_US">{{'LANG_EN'|translate}}</option>
+                        <option value="fr_FR">{{'LANG_FR'|translate}}</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <a href=""
+           class="modal-action modal-close waves-effect waves-orange btn btn-flat">
+            {{'ADD_CANCELBTN'|translate}}
+        </a>
+        <a href=""
+           class="modal-action modal-close waves-effect waves-orange btn btn-flat"
+           ng-click="detailCtrl.saveTranslation()"
+           ng-class="{disabled:!translate_form.$valid}">
+            {{'ADD_SAVEBTN'|translate}}
+        </a>
     </div>
 </div>
