added category detail view

--- a/home/public/partials/header-navigation.html
+++ b/home/public/partials/header-navigation.html
@@ -4,6 +4,9 @@
             <a href="#" data-activates="nav-mobile" class="left button-collapse hide-on-large-only">
                 <i class="material-icons">menu</i>
             </a>
+            <div class="center">
+
+            </div>
             <div style="margin-right: 16px">
                 <a href="" class="right dropdown-btn" style="margin-left: 16px" data-activates="account_dropdown">
                     <i class="material-icons left">perm_identity</i>{{'HEADER_ACCBTN'|translate}}
@@ -36,7 +39,10 @@
     </nav>
     <!-- side navbar, is only permanent on large displays small and medium sized displays show a menu icon to slide the navbar in-->
     <ul id="nav-mobile" class="side-nav fixed" style="overflow: auto; transform: translateX(0px);">
-        <li class="center brand-logo"><i style="margin-top: 16px;" class="material-icons large">account_circle</i></li>
+        <li class="center brand-logo">
+            <h4 class="center">Refugees Gießen</h4>
+            <i style="margin-top: 16px;" class="material-icons large">account_circle</i>
+        </li>
         <div class="divider"></div>
         <li class="no-padding">
             <ul class="collapsible">
