--- a/home/public/partials/guidedetails.html
+++ b/home/public/partials/guidedetails.html
@@ -36,7 +36,7 @@
                 <div class="card-action">
                     <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.editTranslation($index)">{{'DETAIL_EDIT'|translate}}</a>
                     <a class="waves-effect waves-orange" href="" ng-click="detailCtrl.removeTranslation($index)">{{'DETAIL_DELETE'|translate}}</a>
-                    <a href="" class="waves-effect waves-orange right" ng-click="detailCtrl.publish($index)" ng-show="authService.getRole() > 3">{{'DETAIL_PUBLISH'|translate}}</a>
+                    <a class="waves-effect waves-orange right" href="" ng-click="detailCtrl.publish($index)" ng-show="authService.getRole() > 3">{{'DETAIL_PUBLISH'|translate}}</a>
                 </div>
             </li>
         </ul>
