--- a/home/public/partials/categorydetails.html
+++ b/home/public/partials/categorydetails.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <div class="row"><a class="col s12 waves-effect waves-orange btn btn-block" ng-click="detailCtrl.addTranslation()">{{'DETAIL_ADD_TRANSLATION'|translate}}</a>
+    <div class="row"><a class="col s6 waves-effect waves-orange btn btn-block" ng-click="detailCtrl.addTranslation()">{{'DETAIL_ADD_TRANSLATION'|translate}}</a>
+        <a class="col s6 waves-effect waves-orange btn btn-block red darken-3"
+        ng-click="detailCtrl.removeCategory()">{{'DETAIL_REMOVE_CATEGORY'|translate}}</a>
     </div>
     <div class="row">
         <div class="row" ng-hide="loadedData">
@@ -24,26 +26,26 @@
         <div ng-repeat="lang in categories">
             <div class="card">
                 <div class="card-content">
-                        <h5>{{lang.val}}</h5>
+                        <h5>{{lang.text}}</h5>
                         {{'LANGUAGE'|translate}}: {{lang.lang}}
                 </div>
                 <div class="card-action">
-                    <a class="waves-effect waves-orange">{{'DETAIL_EDIT'|translate}}</a>
-                    <a class="waves-effect waves-orange">{{'DETAIL_DELETE'|translate}}</a>
+                    <a class="waves-effect waves-orange" ng-click="detailCtrl.editTranslation($index)">{{'DETAIL_EDIT'|translate}}</a>
+                    <a class="waves-effect waves-orange" ng-click="detailCtrl.removeTranslation($index)">{{'DETAIL_DELETE'|translate}}</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div id="addTransModal" class="modal modal-fixed-footer">
+<div id="transModal" class="modal modal-fixed-footer">
     <div class="modal-content">
         <h4>{{'DETAIL_ADD_TRANSLATION'|translate}}</h4>
         <div class="divider"></div>
         <form name="translate_form" novalidate>
             <div class="row">
                 <div class="input-field col s12">
-                    <input ng-model="translation.text" id="translationtext" class="input-field" required>
+                    <input ng-model="translation.text" id="translationtext" type="text" required>
                     <label for="translationtext">{{'ADD_GUIDELINE'|translate}}</label>
                 </div>
             </div>
@@ -70,5 +72,16 @@
            ng-class="{disabled:!translate_form.$valid}">
             {{'ADD_SAVEBTN'|translate}}
         </a>
+    </div>
+</div>
+
+<div id="confModal" class="modal">
+    <div class="modal-content">
+        <h4>{{'DETAIL_REMOVE_CATEGORY'|translate}}</h4>
+        <p>{{'DETAIL_REMOVE_CONFIRMATION'|translate}}</p>
+    </div>
+    <div class="modal-footer">
+        <a ng-click="remove = true" class="modal-action modal-close waves-effect red darken-3 btn">{{'DETAIL_DELETE'|translate}}</a>
+        <a ng-click="remove = false" class="modal-action modal-close waves-effect btn">{{'ADD_CANCELBTN'|translate}}</a>
     </div>
 </div>
