fixed some errors in GuideDetailView

--- a/home/public/partials/categorydetails.html
+++ b/home/public/partials/categorydetails.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div id="transModal" class="modal modal-fixed-footer">
+<div id="transModal" class="modal">
     <div class="modal-content">
         <h4>{{'DETAIL_ADD_TRANSLATION'|translate}}</h4>
         <div class="divider"></div>
