--- a/home/public/partials/register-tab.html
+++ b/home/public/partials/register-tab.html
@@ -28,6 +28,6 @@
         </div>
     </div>
     <div class="row">
-        <input class="waves-teal waves-effect btn right" ng-class="{disabled:!registerForm.$valid}" type="submit" value="{{'REGISTERTAB_REGISTERBTN'|translate}}">
+        <input class="waves-orange waves-effect btn right" ng-class="{disabled:!registerForm.$valid}" type="submit" value="{{'REGISTERTAB_REGISTERBTN'|translate}}">
     </div>
 </form>
