--- a/home/public/partials/login-tab.html
+++ b/home/public/partials/login-tab.html
@@ -7,5 +7,5 @@
         <input ng-model="logintabCtrl.user['password']" id="password" type="password">
         <label for="password">{{'LOGINTAB_PASSWORD'|translate}}</label>
     </div>
-    <a class="waves-teal waves-effect btn right" ng-click="logintabCtrl.login()" ng-disabled="disabled" type="submit">{{'LOGINTAB_LOGINBTN'|translate}}</a>
+    <a class="waves-orange waves-effect btn right" ng-click="logintabCtrl.login()" ng-disabled="disabled" type="submit">{{'LOGINTAB_LOGINBTN'|translate}}</a>
 </form>
