--- a/home/public/partials/dashboard.html
+++ b/home/public/partials/dashboard.html
@@ -1,18 +1,5 @@
 <div class="container">
     <div class="row">
-        <div class="col s12">
-            <h1>{{'DASHBOARD_TITLE' | translate}}</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col l4 m6 s12">
-            <p class="flow-text center">{{'DASHBOARD_TEXT1'|translate}}</p>
-        </div>
-        <div class="col l4 m6 s12">
-            <p class="flow-text center">{{'DASHBOARD_TEXT2'|translate}}</p>
-        </div>
-        <div class="col l4 m6 offset-m3 s12">
-            <p class="flow-text center">{{'DASHBOARD_TEXT3'|translate}}</p>
-        </div>
+        <h1>Dashboard</h1>
     </div>
 </div>
