added usercrudservice, modified UserDetailView

--- a/home/public/partials/header-navigation.html
+++ b/home/public/partials/header-navigation.html
@@ -1,15 +1,11 @@
 <header>
     <nav class="top-nav teal">
-        <div class="nav-wrapper">
-            <div class="row">
-            <a href="#" data-activates="nav-mobile" class="col left button-collapse hide-on-large-only">
+        <div class="nav-wrapper container">
+            <a href="#" data-activates="nav-mobile" class="left button-collapse hide-on-large-only">
                 <i class="material-icons">menu</i>
             </a>
-                <!--div id="breadcrumb" class="col s9 push-s3">
-                    <a href="#/" class="breadcrumb">Home</a>
-                </div-->
 
-                <div class="col push-s9">
+            <div class="right">
                 <a href="" class="right dropdown-btn" style="margin-left: 16px" data-activates="account_dropdown">
                     <i class="material-icons left">perm_identity</i>{{'HEADER_ACCBTN'|translate}}
                 </a>
@@ -36,7 +32,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
         </div>
     </nav>
