--- a/home/public/css/stylesheet.css
+++ b/home/public/css/stylesheet.css
@@ -54,3 +54,16 @@ nav.top-nav {
 .side-nav .nav-header {
      padding-top: 1px;
 }
+
+#role_dropdown.dropdown-content {
+  background-color: #fff;
+  margin: 0;
+  display: none;
+  min-width: 100px;
+  max-height: 650px;
+  overflow-y: auto;
+  opacity: 0;
+  position: absolute;
+  z-index: 999 !important;
+  will-change: width, height;
+}
