--- a/home/public/partials/userdetails.html
+++ b/home/public/partials/userdetails.html
@@ -1,13 +1,13 @@
 <div class="container">
     <h1>{{'USERCTRL_HEADER'|translate}}</h1>
-    <div class="card">
+    <div class="card col s12 l5">
         <div class="card-content">
             <span class="card-title">{{userCtrl.userProfile.username}}</span>
             <div class="divider"></div>
             <p style="padding-top: 16px">
                 {{'USERCTRL_NAME'|translate}}: {{userCtrl.userProfile.name}}<br/>
                 {{'USERCTRL_EMAIL'|translate}}: {{userCtrl.userProfile.email}}<br/>
-                {{'USERCTRL_ROLE'|translate}}: {{userCtrl.getRole()}}
+                {{'USERCTRL_ROLE'|translate}}: {{userCtrl.getRole(userCtrl.userProfile.role)}}
             </p>
         </div>
         <div class="card-action">
@@ -16,7 +16,7 @@
             <a href="" class="waves-effect">{{'USERCTRL_CHUSERNAME'|translate}}</a>
         </div>
     </div>
-    <div class="card">
+    <div class="card col s12 l6 push-l1">
         <div class="card-content">
             <span class="card-title">{{'USERCTRL_CHPASSWORD'|translate}}</span>
             <div class="divider"></div>
@@ -37,5 +37,26 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div class="card col s12" ng-hide="userCtrl.userProfile.role < 2">
+        <div class="card-content">
+            <ul class="collection with-header">
+                <li class="collection-header teal"><h5 class="white-text">{{'USERCTRL_USERS'|translate}}</h5></li>
+                <li class="collection-item" ng-repeat="user in users" dropdown-directive>
+                    <span class="title">{{user.username}}</span>
+                    <a class="secondary-content btn dropdown-button" data-activates="role_dropdown"><i class="material-icons left">supervisor_account</i>{{'USERCTRL_ADJROLE'|translate}}</a>
+                    <p>
+                        {{'USERCTRL_ROLE'|translate}}: {{user.role}}
+                    </p>
+                </li>
+                <div class="divider" ng-hide="$last"></div>
+            </ul>
+        </div>
+        <ul id="role_dropdown" class="dropdown-content">
+            <li class="dropdown-item"><a href="#!" class="btn-flat">Newbie</a></li>
+            <li class="dropdown-item"><a href="#!" class="btn-flat">Editor</a></li>
+            <li class="dropdown-item"><a href="#!" class="btn-flat">Moderator</a></li>
+            <li class="dropdown-item"><a href="#!" class="btn-flat">Administrator</a></li>
+        </ul>
     </div>
 </div>
