--- a/home/public/css/stylesheet.css
+++ b/home/public/css/stylesheet.css
@@ -55,6 +55,14 @@ nav.top-nav {
      padding-top: 1px;
 }
 
+.collection.users {
+    margin: 0.5rem 0 1rem 0;
+    border: 1px solid #e0e0e0;
+    border-radius: 2px;
+    overflow: visible;
+    position: relative;
+}
+
 #role_dropdown.dropdown-content {
   background-color: #fff;
   margin: 0;
@@ -63,7 +71,7 @@ nav.top-nav {
   max-height: 650px;
   overflow-y: auto;
   opacity: 0;
-  position: absolute;
+  position: relative;
   z-index: 999 !important;
   will-change: width, height;
 }
