--- a/home/public/partials/header-navigation.html
+++ b/home/public/partials/header-navigation.html
@@ -38,8 +38,8 @@
     <!-- side navbar, is only permanent on large displays small and medium sized displays show a menu icon to slide the navbar in-->
     <ul id="nav-mobile" class="side-nav fixed" style="overflow: auto; transform: translateX(0px);">
         <li class="center teal nav-header">
-            <h4 class="center white-text">Refugees Gießen</h4>
-            <i class="material-icons large white-text">account_circle</i>
+            <h4 class="center white-text header-title">Refugees Gießen</h4>
+            <img class="header-icon" src="public/res/icon.png" />
         </li>
         <div class="divider"></div>
         <div id="nav-items" class="white">
