--- a/home/public/partials/dashboard.html
+++ b/home/public/partials/dashboard.html
@@ -2,4 +2,43 @@
     <div class="row">
         <h1>Dashboard</h1>
     </div>
+    <div class="row">
+        <div class="col s12">
+            <div class="card">
+                <div class="card-content" style="overflow:hidden">
+                    <div id="guidelangchart" style="height:300px"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 l6">
+            <div class="card">
+                <div class="card-content">
+                    <h3>
+                        Publish Queue
+                    </h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <h3>
+                        Translator TopList
+                    </h3>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 l6">
+            <div class="card">
+                <div class="card-content">
+                    <h3>Guidelines Not In User Language Yet</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <h3>
+                        Categories Not In User Language Yet
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
