--- a/home/public/partials/dashboard.html
+++ b/home/public/partials/dashboard.html
@@ -13,30 +13,49 @@
         <div class="col s12 l6">
             <div class="card">
                 <div class="card-content">
-                    <h3>
-                        Publish Queue
-                    </h3>
+                    <ul class="collection with-header">
+                        <li class="collection-item header teal white-text"><h5>Publish Queue</h5></li>
+                        <a class="collection-item" ng-repeat="guide in notPublished">
+                            {{guide.text}}
+                        </a>
+                        <li class="collection-item" ng-show="notPublished.length === 0">All Guidelines are published</li>
+                    </ul>
                 </div>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <h3>
-                        Translator TopList
-                    </h3>
+                    <ul class="collection with-header">
+                        <li class="collection-item header teal white-text"><h5>Translator Toplist</h5></li>
+                        <li class="collection-item" ng-repeat="user in users">
+                            <span>{{user.username}}</span>
+                            <span class="secondary-content">{{user.translations}}</span>
+                        </li>
+                        <li class="collection-item" ng-show="users.length === 0">There are no users to list</li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="col s12 l6">
             <div class="card">
                 <div class="card-content">
-                    <h3>Guidelines Not In User Language Yet</h3>
+                    <ul class="collection with-header">
+                        <li class="collection-item header teal white-text"><h5>Guidelines that are not in your language</h5></li>
+                        <a class="collection-item" ng-repeat="guide in guidelines">
+                            {{guide.text}}
+                        </a>
+                        <li class="collection-item" ng-show="guidelines.length === 0">All guidelines have been translated to your language.</li>
+                    </ul>
                 </div>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <h3>
-                        Categories Not In User Language Yet
-                    </h3>
+                    <ul class="collection with-header">
+                        <li class="collection-item header teal white-text"><h5>Categories that are not in your language</h5></li>
+                        <a class="collection-item" ng-repeat="category in categories">
+                            {{category[en_US]||category[de_DE]}}
+                        </a>
+                        <li class="collection-item" ng-show="categories.length === 0">All categories have been translated to your language.</li>
+                    </ul>
                 </div>
             </div>
         </div>
