correct data for piechart

--- a/home/public/partials/dashboard.html
+++ b/home/public/partials/dashboard.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <h1>Dashboard</h1>
+        <h1>{{'DASH_TITLE'|translate}}</h1>
     </div>
     <div class="row">
         <div class="col s12">
@@ -14,26 +14,26 @@
             <div class="card">
                 <div class="card-content">
                     <ul class="collection with-header">
-                        <li class="collection-item header teal white-text"><h5>Publish Queue</h5></li>
+                        <li class="collection-item header teal white-text"><h5>{{'DASH_PUBQ'|translate}}</h5></li>
                         <a class="collection-item" ng-repeat="guide in notPublished" href="#/guide/{{guide._id}}">
                             <p>
                                 <span class="secondary-content orange-text">{{guide.lang}}</span><br/>
                                 <span class="black-text">{{guide.text}}</span>
                             </p>
                         </a>
-                        <li class="collection-item" ng-show="notPublished.length === 0">All Guidelines are published</li>
+                        <li class="collection-item" ng-show="notPublished.length === 0">{{'DASH_PUBQMSG'|translate}}</li>
                     </ul>
                 </div>
             </div>
             <div class="card">
                 <div class="card-content">
                     <ul class="collection with-header">
-                        <li class="collection-item header teal white-text"><h5>Translator Toplist</h5></li>
+                        <li class="collection-item header teal white-text"><h5>{{'DASH_TRANSTOP'|translate}}</h5></li>
                         <li class="collection-item" ng-repeat="user in users">
                             <span>{{user.username}}</span>
                             <span class="secondary-content orange-text">{{user.translations}}</span>
                         </li>
-                        <li class="collection-item" ng-show="users.length === 0">There are no users to list. This seems to be an error, please inform your admin about this.</li>
+                        <li class="collection-item" ng-show="users.length === 0">{{'DASH_TRANSTOPMSG'|translate}}</li>
                     </ul>
                 </div>
             </div>
@@ -42,24 +42,24 @@
             <div class="card">
                 <div class="card-content">
                     <ul class="collection with-header">
-                        <li class="collection-item header teal white-text"><h5>Guidelines that are not in your language</h5></li>
+                        <li class="collection-item header teal white-text"><h5>{{'DASH_GUIDELIST'|translate}}</h5></li>
                         <a class="collection-item black-text" ng-repeat="guide in guidelines" href="#/guide/{{guide._id}}">
                             <span class="secondary-content orange-text">{{guide.langs.join(", ")}}</span><br/>
                             {{guide.guidelines[0].text}}
                         </a>
-                        <li class="collection-item" ng-show="guidelines.length === 0">All guidelines have been translated to your language.</li>
+                        <li class="collection-item" ng-show="guidelines.length === 0">{{'DASH_GUIDELISTMSG'|translate}}</li>
                     </ul>
                 </div>
             </div>
             <div class="card">
                 <div class="card-content">
                     <ul class="collection with-header">
-                        <li class="collection-item header teal white-text"><h5>Categories that are not in your language</h5></li>
+                        <li class="collection-item header teal white-text"><h5>{{'DASH_CATEGLIST'|translate}}</h5></li>
                         <a class="collection-item black-text" ng-repeat="category in categories" href="#/category/{{category._id}}">
                             <span class="secondary-content orange-text">{{getLangCodes(category.text)}}</span><br/>
                             {{category.text['en_US']}}
                         </a>
-                        <li class="collection-item" ng-show="categories.length === 0">All categories have been translated to your language.</li>
+                        <li class="collection-item" ng-show="categories.length === 0">{{'DASH_CATEGLISTMSG'|translate}}</li>
                     </ul>
                 </div>
             </div>
